--- a/css/style.css
+++ b/css/style.css
@@ -1,122 +1,167 @@
 /*Begin your code here*/
+
 /*Requirement 1*/
-body{
-  margin: 0;
-  padding: 0;
-  font-size: 16pt; 
+
+body {
+    margin: 0;
+    padding: 0;
+    font-size: 16pt;
+    font-family: Raleway, sans-serif;
+    background-image: url("../images/concrete_seamless.png");
 }
 
 /*Requirement 2*/
-header{
-  background: #fff;
-  border-bottom: 3px solid #50C7C7;
-  /*Your  code here again.*/
 
+header {
+    background: #fff;
+    border-bottom: 3px solid #50C7C7;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
 }
 
 /*Requirement 3*/
-.nav_links{
-  /*Your code here again.*/
+
+.nav_links {
+    /*Your code here again.*/
+    display: flex;
+    flex-direction: column;
 }
 
-
 /*Requirement 4*/
-.price{
+
+.price {
     min-height: 500px;
     /*Your code here*/
     /*You must use flex.
     /*Don't forget to vertically and horizontally 
     align the element*/
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 /*Requirement 5*/
-.package {
-  margin: 12px;
-  background: #fff;
-  border-radius: 7px;
-  padding: 0 0 50px 0;
-  /*Your code here.*/
-  /*Take a look at flex-basis*/
 
+.package {
+    margin: 12px;
+    background: #fff;
+    border-radius: 7px;
+    padding: 0 0 50px 0;
+    /*Your code here.*/
+    /*Take a look at flex-basis*/
+    flex-basis: 400px;
 }
 
 /*Requirement 6*/
-/**  UNCOMMENT THIS CODE ONCE YOU
-/**  HAVE THE SELECTOR
-{
-  background: #288080;
-  border: 2px solid #45ADAD;
-  padding: 20px 0;
-  border-radius: 7px 7px 0 0;
-}*/
 
+.package > header {
+    background: #288080;
+    border: 2px solid #45ADAD;
+    padding: 20px 0;
+    border-radius: 7px 7px 0 0;
+}
 
 /*Requirement 7*/
-.gallery{
-  min-height: 600px;
-  /*Your code here again.*/
 
+.gallery {
+    min-height: 600px;
+    /*Your code here again.*/
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: space-around;
 }
 
 /*Requirement 8*/
-/**  UNCOMMENT THIS CODE ONCE YOU
-/**  HAVE THE SELECTOR
-{
-  border: 10px #50C7C7 solid;
-  margin: 10px;
-  width: 300px;
+
+.gallery > img {
+    border: 10px #50C7C7 solid;
+    margin: 10px;
+    width: 300px;
 }
-*/
 
 /*Requirement 9*/
-#logo{
-   /*Your code here.*/
- 
+
+#logo {
+    /*Your code here.*/
+    animation-name: logo_grow;
+    animation-duration: 15s;
+    animation-iteration-count: 1;
 }
 
 /*Keyframes for animation*/
-@-webkit-keyframes logo_grow{
-  /*Your code here.*/
 
+@-webkit-keyframes logo_grow {
+    /*Your code here.*/
+    from {width: 25px; opacity: 0;}
+    to {width: 420px; opacity: 1;}
 }
 
-@keyframes logo_grow{
-  /*Your code here.*/
+@keyframes logo_grow {
+    /*Your code here.*/
+    from {width: 25px; opacity: 0;}
+    to {width: 420px; opacity: 1;}
+}
 
-} 
-
-@media screen and (min-width: 850px){
-
-  /*Requirement 10*/
-  header{
-    /*Your code here again.*/  
-  }
-
-  /*Requirement 10*/
-  .nav_links{
-    /*Your code here again.*/  
-  }
-
-  /*Requirement 11*/
-  .package {
-    /*Your code here again.*/
-  } 
+@media screen and (min-width: 850px) {
+    /*Requirement 10*/
+    header {
+        /*Your code here again.*/
+        flex-flow: row wrap;
+        justify-content: space-between;
+    }
+    /*Requirement 10*/
+    .nav_links {
+        /*Your code here again.*/
+        flex-flow: row wrap;
+    }
+    /*Requirement 11*/
+    .package {
+        /*Your code here again.*/
+        flex-flow: column wrap;
+        align-items: center;
+        flex-basis: 230px;
+    }
 }
 
 /*Requirement 12*/
+
 /*Add media query to handle reduced-motion*/
-/*Your code here again.*/ 
-
-
-
-@media print { 
-
-  /*Requirement 13*/
-  /*Requirement 14*/
-  /*Requirement 15*/
-  /*Requirement 16*/
-  /*Requirement 17*/
-  /*Requirement 18*/
- 
+@media screen and (prefers-reduced-motion: reduce) {
+    #logo {
+        animation: none;
+    }
 }
 
+/*Your code here again.*/
+
+@media print {
+    /*Requirement 13*/
+    body {
+        background-image: none;
+    }
+    /*Requirement 14*/
+    nav {
+        width: 100%;
+    }
+    /*Requirement 15*/
+    .nav_links {
+        flex-flow: row wrap;
+        justify-content: space-around;
+    }
+    /*Requirement 16*/
+    .price {
+        align-items: flex-end;
+    }
+    /*Requirement 17*/
+    .package {
+        border: 2px solid #45ADAD;
+        flex-basis: 200px;
+    }
+    /*Requirement 18*/
+    #gallery, .gallery {
+        display: none;
+    }
+}
